--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.21.1",
         "fork-awesome": "^1.2.0",
         "js-cookie": "^3.0.0",
+        "lightweight-charts": "^4.0.1",
         "pinia": "^2.0.23",
         "resolve-url-loader": "^4.0.0",
         "vite-plugin-resolve-extension-vue": "^0.1.0",
