--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "binance/binance-connector-php": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "^1.16",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "scherbak-electronics/binance-connector-php": "1.0.0",
         "silber/bouncer": "^1.0"
     },
     "require-dev": {
@@ -71,6 +71,12 @@
             "pestphp/pest-plugin": true
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/scherbak-electronics/binance-connector-php.git"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
